<resources>
    <string name="app_name">Travel</string>
    <string name="back_arrow">&#xf3cf;</string>

    <!-- Dialog Names -->
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>

    <!-- Fragment Names -->
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="view_post_fragment">View Post</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_profile_fragment">ViewProfile</string>

    <!-- Activity names -->
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>

    <!-- Account Settings -->
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_blocked_users">Blocked Users</string>
    <string name="text_private_account">Private Account</string>
    <string name="text_activate_blog">Activate Blog</string>
    <string name="text_signout">Signout</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_verify_password">Verify Password</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- Firebase messages -->
    <string name="auth_success">Authentication Success.</string>
    <string name="auth_failed">Authentication failed.</string>

    <!--  Firebase data fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>

    <!-- Photo Types -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!-- Profile -->
    <string name="text_posts">Posts</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>

    <!-- Intent Extras -->
    <string name="calling_activity">calling_activity</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="selected_image">selected_image</string>
    <string name="intent_user">intent_user</string>

    <!-- Bundle arg names -->
    <string name="activity_number">activity_number</string>

    <!-- Strings -->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="open_camera">Open Camera</string>
    <string name="string_next">Next</string>
    <string name="string_share">Share</string>
    <string name="text_location">Location</string>

    <!-- Text View Hints -->
    <string name="hint_find_a_location">Find a location…</string>
    <string name="hint_write_a_description">Write a description…</string>


</resources>
