<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/base_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/display_current_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textWebPassword"
                        android:hint="@string/hint_current_password"
                        android:textSize="@dimen/base_font_size"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/display_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textWebPassword"
                        android:hint="@string/hint_new_password"
                        android:textSize="@dimen/base_font_size"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/display_verify_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textWebPassword"
                        android:hint="@string/hint_verify_password"
                        android:textSize="@dimen/base_font_size"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/link_blue"
                    android:layout_marginTop="@dimen/base_margin"/>

            </LinearLayout>

    </ScrollView>

</merge>