<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@drawable/rounded_border_shadow">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="7dp">

            <TextView
                android:id="@+id/tvPosts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lightBlack"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_posts"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="7dp">

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lightBlack"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_followers"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="7dp">

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lightBlack"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_following"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

</merge>